sidebar position is relative, prevents it from being cutoff if the window is too small

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ $on-laptop:        800px;
 }
 @media (min-width: 48em) {
   .sidebar {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;
